{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 61,
  "lineage": "00fb10c0-7a95-b7a3-ecee-ce2e41f6b66f",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:loadbalancer/app/ialb/0d29e1612c18cf60",
            "arn_suffix": "app/ialb/0d29e1612c18cf60",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-665441617.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:loadbalancer/app/ialb/0d29e1612c18cf60",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048c6eb4aee266fcb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08609ec6350057dc5"
              },
              {
                "subnet_id": "subnet-08b4686b52785a2d3"
              }
            ],
            "subnets": [
              "subnet-08609ec6350057dc5",
              "subnet-08b4686b52785a2d3"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-021b2c87667445c93",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:listener/app/ialb/0d29e1612c18cf60/63ef755c1a996e3e",
            "certificate_arn": "arn:aws:acm:eu-west-1:917046156167:certificate/a41fffa2-8f85-4e53-b58d-2226e322106c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/wordpress-tgt/8b0e7949c10a7465",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:listener/app/ialb/0d29e1612c18cf60/63ef755c1a996e3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:loadbalancer/app/ialb/0d29e1612c18cf60",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.precemelogu",
            "module.ALB.aws_acm_certificate_validation.precemelogu",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.precemelogu",
            "module.ALB.data.aws_route53_zone.precemelogu",
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/tooling-tgt/52046c03227254c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:listener-rule/app/ialb/0d29e1612c18cf60/63ef755c1a996e3e/47b490c264969f9e",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.blogsite.live"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:listener-rule/app/ialb/0d29e1612c18cf60/63ef755c1a996e3e/47b490c264969f9e",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:listener/app/ialb/0d29e1612c18cf60/63ef755c1a996e3e",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ALB.aws_acm_certificate.precemelogu",
            "module.ALB.aws_acm_certificate_validation.precemelogu",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.precemelogu",
            "module.ALB.data.aws_route53_zone.precemelogu",
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/tooling-tgt/52046c03227254c5",
            "arn_suffix": "targetgroup/tooling-tgt/52046c03227254c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/tooling-tgt/52046c03227254c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/wordpress-tgt/8b0e7949c10a7465",
            "arn_suffix": "targetgroup/wordpress-tgt/8b0e7949c10a7465",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:917046156167:targetgroup/wordpress-tgt/8b0e7949c10a7465",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ACS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-050a037f630e6b245",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050a037f630e6b245",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-03b6b95c4c4d8d9c6",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b6b95c4c4d8d9c6",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-0b039dedfb0258ae2",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b039dedfb0258ae2",
            "ingress": [],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-048c6eb4aee266fcb",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048c6eb4aee266fcb",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-048baa253f98e6cd7",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048baa253f98e6cd7",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:security-group/sg-08352a46b3b939f99",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08352a46b3b939f99",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "917046156167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2239983252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b039dedfb0258ae2",
            "security_group_rule_id": "sgr-0a5e59e6542b8e01a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-419750960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b039dedfb0258ae2",
            "security_group_rule_id": "sgr-063383572f8d4170f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-545665523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048baa253f98e6cd7",
            "security_group_rule_id": "sgr-021fa4acf631872e6",
            "self": false,
            "source_security_group_id": "sg-050a037f630e6b245",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3410800767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048c6eb4aee266fcb",
            "security_group_rule_id": "sgr-0eee87f41d8cca572",
            "self": false,
            "source_security_group_id": "sg-048baa253f98e6cd7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3284671284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b6b95c4c4d8d9c6",
            "security_group_rule_id": "sgr-061eb05eb0e18f086",
            "self": false,
            "source_security_group_id": "sg-050a037f630e6b245",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-68893989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b6b95c4c4d8d9c6",
            "security_group_rule_id": "sgr-0e8fc92c00886ad96",
            "self": false,
            "source_security_group_id": "sg-08352a46b3b939f99",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-2547887535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03b6b95c4c4d8d9c6",
            "security_group_rule_id": "sgr-044cc9b33e7d04ef7",
            "self": false,
            "source_security_group_id": "sg-08352a46b3b939f99",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1205120878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-048baa253f98e6cd7",
            "security_group_rule_id": "sgr-03e9c8c18c2d4f64a",
            "self": false,
            "source_security_group_id": "sg-0b039dedfb0258ae2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1724994035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050a037f630e6b245",
            "security_group_rule_id": "sgr-0e8f1209893a4e476",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1637174136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08352a46b3b939f99",
            "security_group_rule_id": "sgr-068e9c5985081555a",
            "self": false,
            "source_security_group_id": "sg-048c6eb4aee266fcb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4192493166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08352a46b3b939f99",
            "security_group_rule_id": "sgr-00e2fb52db22a3c89",
            "self": false,
            "source_security_group_id": "sg-050a037f630e6b245",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Security.aws_security_group.ACS",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063413fe44d711532",
            "domain": "vpc",
            "id": "eipalloc-063413fe44d711532",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-210-255-175.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.255.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ACS-EIP"
            },
            "tags_all": {
              "Name": "ACS-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:internet-gateway/igw-06ce695dd39b1ba8e",
            "id": "igw-06ce695dd39b1ba8e",
            "owner_id": "917046156167",
            "tags": {
              "Name": "vpc-021b2c87667445c93-IG!"
            },
            "tags_all": {
              "Name": "vpc-021b2c87667445c93-IG!"
            },
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ce695dd39b1ba8e",
            "id": "r-rtb-05127a772cee645811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05127a772cee64581",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ce695dd39b1ba8e",
            "id": "r-rtb-02fcc12f2b9d42cc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02fcc12f2b9d42cc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:route-table/rtb-05127a772cee64581",
            "id": "rtb-05127a772cee64581",
            "owner_id": "917046156167",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Private-Route-Table"
            },
            "tags_all": {
              "Name": "ACS-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:route-table/rtb-02fcc12f2b9d42cc8",
            "id": "rtb-02fcc12f2b9d42cc8",
            "owner_id": "917046156167",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ACS-Public-Route-Table"
            },
            "tags_all": {
              "Name": "ACS-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042e9de03c5e89390",
            "route_table_id": "rtb-05127a772cee64581",
            "subnet_id": "subnet-08609ec6350057dc5"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e766c2b7979b2db5",
            "route_table_id": "rtb-05127a772cee64581",
            "subnet_id": "subnet-08b4686b52785a2d3"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f18b4d981c490ac",
            "route_table_id": "rtb-05127a772cee64581",
            "subnet_id": "subnet-0571d3a864a0b1cef"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c631d8253ea7612",
            "route_table_id": "rtb-05127a772cee64581",
            "subnet_id": "subnet-08f4e4d339e913af1"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:subnet/subnet-08609ec6350057dc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08609ec6350057dc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917046156167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-0"
            },
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:subnet/subnet-08b4686b52785a2d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b4686b52785a2d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917046156167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-1"
            },
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:subnet/subnet-0571d3a864a0b1cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0571d3a864a0b1cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917046156167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-2"
            },
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:subnet/subnet-08f4e4d339e913af1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f4e4d339e913af1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917046156167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "ACS-PrivateSubnet-3"
            },
            "vpc_id": "vpc-021b2c87667445c93"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:917046156167:vpc/vpc-021b2c87667445c93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0bada386d9ec33ab5",
            "default_route_table_id": "rtb-0704058ccad0fff08",
            "default_security_group_id": "sg-0c56f7b7a66c9892c",
            "dhcp_options_id": "dopt-0386c18c26d33319e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021b2c87667445c93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0704058ccad0fff08",
            "owner_id": "917046156167",
            "tags": {
              "Name": "ACS-VPC"
            },
            "tags_all": {
              "Name": "ACS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    }
  ]
}